MFE Bug Fixes (#865)
* Moved AppProvider for MFE to mfeRoutes

* Remove star from repo list

* Fixed: repo code blame - commit message is not visible

* Removed unused import

* Fixed markdown preview styles in MFE

* Reverted vite config

* Removed stars prop

--- a/packages/ui/src/components/markdown-viewer/style.css
+++ b/packages/ui/src/components/markdown-viewer/style.css
@@ -1,4 +1,5 @@
 .prose {
+  .dark &,
   .dark-std-std & {
     &.wmde-markdown,
     &.wmde-markdown-var {
@@ -64,6 +65,7 @@
     }
   }
 
+  .light &,
   .light-std-std & {
     &.wmde-markdown,
     &.wmde-markdown-var {
